--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
   <meta charset="UTF-8" />
   <title>Rock Paper Scissors Game</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="" />
+  <link rel="stylesheet" href="style.css" />
   <style></style>
-  <script src="script.js"></script>
+  
   <body>
-    
+    <div id="intro">
+      <h2>Welcome to the Rock Paper Scissors Game!</h2>
+      <p>Everyone knows the rules, so lets begin! Pick your symbol and let's begin!</p>
+    </div>
+      <div id="container">
+      <button id="rock">ROCK<img src="images/rock.png"></button>
+      <button id="paper">PAPER<img src="images/paper.png"></button>
+      <button id="scissors">SCISSORS<img src="images/scissors.png"></button>
+    </div>
+    <div id="choices">
+    </div>
+    <div id="results">
+    </div>
   </body>
+  <script src="script.js"></script>
 </html>
